...
                                    <outlet property="dataSource" destination="k9Y-sO-uBl" id="jlh-MV-n5y"/>
                                    <outlet property="delegate" destination="k9Y-sO-uBl" id="8TY-LL-IM3"/>
                                </connections>
                            </view>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NJR-Pk-tTx" customClass="ButtonMore" customModule="groma" customModuleProvider="target">
                                <rect key="frame" x="170" y="470.5" width="35" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="skip"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Skip">
                                    <color key="titleColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.67450980392156867" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
...
