...
        switch self {
        case .add:
            return "add"
        case .submit:
            return "submit"
        case .toggleOpen:
            return "toggle"
        case .edit:
            return "edit"
        case .expandSections:
            return "expandSections"
        }
    }
...
